--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ beautifulsoup4==4.13.4
 certifi==2025.4.26
 chardet==5.2.0
 charset-normalizer==3.4.2
+cryptography==42.0.5
 defusedxml==0.7.1
 Django==5.2.1
 django-allauth==65.8.1
